--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
   margin: 0;
   padding: 0;
-  background-size: cover;
+  background: linear-gradient(#eed4d8);
   font-family: 'Love Ya Like A Sister';
-  background-color: #6a0036;
   text-align: center;
   overflow-x: hidden;
-  
 }
 
 .app {
@@ -41,22 +39,41 @@ p {
   }
 }
 
-#botao{
-  text-decoration: none;
-  font-size: 22px;
-  border: 2px solid rgb(243, 242, 242);
-  color: #fff;
-  padding: 10px 9%;
-  border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  background: rgba(255, 255, 255, 0.2); /* fundo branco com transparência */
-  backdrop-filter: blur(10px); /* desfoca o que estiver atrás */
+    swiper-container {
+      width: 100%;
+      height: 100%;
+    }
 
-}
+    swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+    }
 
-.app{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70vh;
-}
+    swiper-slide img {
+      display: block;
+      width: 340px;
+      height: 340px;
+      object-fit: cover;
+      border-radius: 15px;
+    }
+
+    .musica{
+        margin-bottom: 2rem;
+    }
+
+    .texto{
+      margin: 10px;
+      font-family: "Roboto";
+    }
+
+    .titu{
+      font-family: 'Love Ya Like A Sister';
+    }
+
+    #mensagem{
+      font-weight: bold;
+    }
